--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "replit",
+  "name": "thecoachthatcooks-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -12,6 +12,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.x",
     "express-rate-limit": "^7.5.0",
-    "openai": "^4.96.0"
+    "openai": "^4.96.0",
+    "firebase-admin": "^11.10.1"
   }
 }
