--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.x",
     "express-rate-limit": "^7.5.0",
     "openai": "^4.96.0",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
     "stripe": "^16.0.0"
   }
 }
